Add links and spacing to header

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <img src="resources/gorfeld-640x640.png">
         </div>
         <div class="header-links">
-            <a href="#">gorfeld encyclopaedia</a>
-            <a href="#">about garmfed</a>
+            <a href="https://en.wikipedia.org/wiki/Garfield_Gets_Real_(video_game)">gorfeld encyclopaedia</a>
+            <a href="https://www.youtube.com/watch?v=OGbhJjXl9Rk">about garmfed</a>
             <a href="#">contact galferde</a>
         </div>
     </nav>
